# ChangeLog for dev-ruby/default_value_for
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*default_value_for-1.0.7 (14 Feb 2012)

  14 Feb 2012; Hans de Graaff <graaff@gentoo.org>
  +default_value_for-1.0.7.ebuild, +metadata.xml:
  Initial import.
