@@ -1,11 +1,12 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST default_value_for-1.0.7.gem 11776 RMD160 a6eaa8612858d5a106c51e6ba1d98b7f4369ca47 SHA1 d2f6586a45ceb1032a24259a794b47f5321a8dea SHA256 ac9920a6507a3cfb78d54034553cbe22decb422bece667a3e73e8a51ce3908c7
+DIST default_value_for-1.0.7.gem 11776 SHA256 ac9920a6507a3cfb78d54034553cbe22decb422bece667a3e73e8a51ce3908c7 SHA512 ce1658a0bb1d9e7903f85aa53b7027d7bbda5aa610602ef87cc0752557b5afd4834cde036d85084aaec3e6d89fc9e1264df6f6ddb87bceb2059639030f038b2d WHIRLPOOL b16cfdf66fe7d6998c932286027f43497ac21ddafb6713c2de34f6b941040daab9bb227b507e34b41eb419e150ba4759777276875eed958e35eb5eb9c20a63a5
+DIST default_value_for-2.0.1.gem 13312 SHA256 7513564c9281fa1c132efe232daa6a361092855e41e4f66630399f322924520c SHA512 a3962a57e0a3d39e44527886937ee0ccd49e365463997aec948915bfb489ced1ed18ac4a9ad8bfcdceb15d92b56a5b6b641561cded2647aba16645718c6cd380 WHIRLPOOL db5b62c2b1f09dfd1ad743b87fa8a0ed6f448000d4858831a3ebeaec924ad11ccbff43df56f2001e6c1a6dff37eaa99ba804a5fd8de993f013ea35c2f0df85d6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk86N1kACgkQiIP6VqMIqNcApQD/QIUHo27vHabKixvibCOkG6gh
-4ou0aqItNKtqXOWnTPYBAIHY4Orv/0gm61rZXRLVTab22H8gmbEXYEKST7eOZdow
-=idrM
+iF4EAREIAAYFAlAJJ3UACgkQiIP6VqMIqNdcvwD/WmUnrulgZ6P3qV7fcfLev0sH
+fwx5ER4rjkAXauSOW7cA/0fCwXGTEYSImYAmwfqtnuc12IT1+1SHZ2Hmx9hyhu8H
+=2Q4R
 -----END PGP SIGNATURE-----
