@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*default_value_for-2.0.1 (20 Jul 2012)
+
+  20 Jul 2012; Hans de Graaff <graaff@gentoo.org>
+  +default_value_for-2.0.1.ebuild:
+  Version bump.
+
 *default_value_for-1.0.7 (14 Feb 2012)
 
   14 Feb 2012; Hans de Graaff <graaff@gentoo.org>
